GenShen: Possible null pointer usage in shGenerationalHeap

XMLWordPrintable

    • gc

      The code checks for a case that a `plab` may be a `nullptr`, but later uses the `plab` unconditionally. See https://github.com/openjdk/jdk/pull/21273/files/5e02b5d877e134c74613cb4e9868598b7881468c#r1843857836 for context.

            Assignee:
            Kelvin Nilsen
            Reporter:
            William Kemper
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: