8344320: GenShen: Possible null pointer usage in shGenerationalHeap

Reviewed-by: wkemper, ysr